flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: flask-app
spec:
  rules:
  - http:
      paths:
        - backend:
            service:
              name: flask-app-service
              port:
                number: 5000
          path: /
          pathType: Prefix
